lander.lessons.lander.lvl2_locate_landing_zone.LocateLandingZone.scala.error
Lander:4: error: not found: value p
			if(p.x(i)==p.x(j)+100 && p.y(i)==p.y(j)){
                           ^Lander:5: error: not found: value d
				d=getSOl(i);
                                ^Lander:6: error: not found: value f
				f=getSol(j);
                                ^Lander:7: error: not found: value d
				return Segment(d,f)		
                                               ^