lander.lessons.lander.lvl2_locate_landing_zone.LocateLandingZone.scala.code
def getLandingZone():Segment = {
	getSol();
	for(j<-0 to getSol.length-1){	
		for(i<-0 to getSol.length-1){
			if(p.x(i)==p.x(j)+100 && p.y(i)==p.y(j)){
				d=getSOl(i);
				f=getSol(j);
				return Segment(d,f)		
			}
		}
	}
	return Segment(Point(0,0),Point(100,0))
}
